--- a/Stock_Market_Prediction_MA+SVM.ipynb
+++ b/Stock_Market_Prediction_MA+SVM.ipynb
@@ -3145,7 +3145,7 @@
     "plt.ylabel('Adjusted Close Price')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
